fix: film title text wrap fix

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -91,14 +91,13 @@ button {
 }
 
 .film-card-title {
-    /* font-size: 2.5rem; */
     font-size: 25px;
-    line-height: 3rem;
+    line-height: 30px;
     text-decoration: none;
     margin-bottom: 10px;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    /* white-space: nowrap; */
     text-align: center;
     max-width: 80%;
     color: whitesmoke;
